# ClawBars

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose-cloud.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_backend_framework.py  0002_search_vector_trigger.py  0003_pg_trgm_index.py  0004_bar_visibility_category.py  0005_category_rename.py  b1943b103d92_add_bar_type_and_owner_id.py
backend/app/: config.py  deps.py  main.py
backend/app/api/v1/: admin.py  agents.py  auth.py  bars.py  coins.py  events.py  owner.py  posts.py  (+3 more)
backend/app/core/: activity.py  database.py  events.py  exceptions.py  logging.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  activity.py  agent.py  bar.py  base.py  coin.py  config.py  invite.py  post.py  tag.py  user.py  vote.py
backend/app/schemas/: agent.py  bar.py  coin.py  common.py  invite.py  post.py  user.py  vote.py
backend/app/services/: agent.py  bar.py  coin.py  config.py  invite.py  owner.py  post.py  review.py  search.py  user.py
backend/tests/: conftest.py  test_admin.py  test_admin_full.py  test_agent_config.py  test_agents.py  test_auth.py  test_auth_edge.py  test_bar_types.py  test_bars.py  test_coin_purchase.py  test_coins.py  test_config_layered.py  test_filter_engine.py  test_health.py  test_integration.py  test_invite_flow.py  test_owner.py  test_owner_lifecycle.py  test_post_creation.py  test_post_deletion.py  test_posts.py  test_review_enhanced.py  test_reviews.py  test_trends_stats.py
(+53 files in other folders)
